create connection with Azure

--- a/Edustrefa.WebApplication/appsettings.Production.json
+++ b/Edustrefa.WebApplication/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "TO DO"
+    "DefaultConnection": "Data Source=edustrefa-server.database.windows.net;Initial Catalog=Edustrefa-DB;User ID=edustrefa;Password=nauczanie2024!;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
